feat: Add balance alternative range (#609)
